[tool.poetry]
name = "bot-poetry-0302"
version = "0.1.0"
description = ""
authors = ["ElenaPolkhovaS <148061037+ElenaPolkhovaS@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
